# Ai_assitant_app

./: .env  package-lock.json
backend/: .gitignore  permissions.py  pyproject.toml
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
src/: App.css  App.js
src/components/: Dashboard.css  Dashboard.js  DocumentViewer.js  FileUpload.js  Login.css  Login.js  PrivateRoute.js  Register.js
